

Version vNext
	General description:

	New features:
		-[Integration.Web.Forms] ASP.NET Web Forms integration added. (work item 19510)

	Bug fixes:
		-[Core] Registering a collection using RegisterAll<object>(Type[]) failed when one of the supplied
		 types was an interface incorrectly stating the the interface did not inherit from Object. 
		 (work item 19577)


Version v2.2.0 (v2.2 RTM)
	General description:
		Besides a few bug fixes, this minor release adds two features that enable some integration scenarios 
		where the container is not in control of the creation of types, but types still need to be wired up.

	New features:
		-[Core] InstanceProducer.Registration property added to allow accessing the InstanceProducer's
		 Registration.
		-[Core] Registration.InitializeInstance(object) method added to allow initializing instances that
		 can't be created by the container, but need to be initialized according to the container's
		 configuration. (work item 19502)

	Bug fixes:
		-[Core] Properties where not injected when a single instance was registered using RegisterSingle<T>(T),
		 although any initializers (registered through RegisterInitializer<T>(Action<T>) did fire. 
		 (work item 19513)
		-[Core] A NullReferenceException would be thrown by the container, when a Func<T> registration was
		 called that returned null combined with the injection of one or more properties on that given T.
		 (work item 19526)
		-[Core] The exception thrown by the container when one of the type's properties can't be resolved is
		 more expressive now, and describes the name of the property.
		-[Core] RegisterSingleOpenGeneric and RegisterOpenGeneric with custom lifestyle didn't work correctly 
		 when the registration was made with the same type for both the service and implementation type, 
		 making the container fall back to resolving a transient type. (work item 19570).


Version v2.1.0 (v2.1 RTM) 2013-03-19
	General description: